--- a/170516/Views/Administrator/ViewRequest.cshtml
+++ b/170516/Views/Administrator/ViewRequest.cshtml
@@ -1,21 +1,18 @@
-﻿@model _170516.Models.Administrator.ViewProductModel
+﻿@model _170516.Models.Administrator.ViewRequestModel
 @{
-    ViewBag.Title = "Quản lý sản phẩm";
+    ViewBag.Title = "Quản lý yêu cầu từ khách hàng";
 }
 <div class="row">
     <div class="col-md-12">
         <div class="content-box-large">
             <div class="panel-heading">
                 <ol class="breadcrumb">
-                    <li class="active">Quản Lý Sản Phẩm</li>
+                    <li class="active">Quản Lý Yêu Cầu Khách Hàng</li>
                 </ol>
-                <div class="panel-title title-3">Danh Sách Sản Phẩm</div>
-                <div class="panel-options">
-                    <a id="addBtn" href="@Url.Action("AddProduct", "Administrator")" class="btn btn-success btn-xs" style="margin-top:0px;"><i class="fa fa-plus"></i> Tạo sản phẩm</a>
-                </div>
+                <div class="panel-title title-3">Danh Sách Yêu Cầu</div>
             </div>
             <div class="panel-body">
-                @if (Model.Products.Any())
+                @if (Model.Requests.Any())
                 {
                     <div class="row">
                         <div class="col-sm-6">
@@ -79,98 +76,101 @@
                                 <thead>
                                     <tr role="row">
                                         <th class="center" tabindex="0" rowspan="1" colspan="1">#</th>
-                                        @if (Model.SortField.Equals("ProductName"))
+                                        @if (Model.SortField.Equals("FullName"))
                                         {
                                             if (Model.IsAsc)
                                             {
-                                                <th class="center" tabindex="0" rowspan="1" data-sort="ProductName" data-direction="desc" colspan="1">Tên <i class="fa fa-fw fa-sort-asc"></i></th>
+                                                <th class="center" tabindex="0" rowspan="1" data-sort="FullName" data-direction="desc" colspan="1">Họ và Tên<i class="fa fa-fw fa-sort-asc"></i></th>
                                             }
                                             else
                                             {
-                                                <th class="center" tabindex="0" rowspan="1" data-sort="ProductName" data-direction="asc" colspan="1">Tên <i class="fa fa-fw fa-sort-desc"></i></th>
+                                                <th class="center" tabindex="0" rowspan="1" data-sort="FullName" data-direction="asc" colspan="1">Họ và Tên <i class="fa fa-fw fa-sort-desc"></i></th>
                                             }
                                         }
                                         else
                                         {
-                                            <th class="center" tabindex="0" rowspan="1" data-sort="ProductName" data-direction="asc" colspan="1">Tên <i class="fa fa-fw fa-sort-asc"></i></th>
+                                            <th class="center" tabindex="0" rowspan="1" data-sort="FullName" data-direction="asc" colspan="1">Họ và Tên <i class="fa fa-fw fa-sort-asc"></i></th>
                                         }
-                                        @if (Model.SortField.Equals("CategoryName"))
+                                        @if (Model.SortField.Equals("RequestContent"))
                                         {
                                             if (Model.IsAsc)
                                             {
-                                                <th class="center" tabindex="0" rowspan="1" data-sort="CategoryName" data-direction="desc" colspan="1">Tên danh mục <i class="fa fa-fw fa-sort-asc"></i></th>
+                                                <th class="center" tabindex="0" rowspan="1" data-sort="RequestContent" data-direction="desc" colspan="1">Nội dung yêu cầu <i class="fa fa-fw fa-sort-asc"></i></th>
                                             }
                                             else
                                             {
-                                                <th class="center" tabindex="0" rowspan="1" data-sort="CategoryName" data-direction="asc" colspan="1">Tên danh mục <i class="fa fa-fw fa-sort-desc"></i></th>
+                                                <th class="center" tabindex="0" rowspan="1" data-sort="RequestContent" data-direction="asc" colspan="1">Nội dung yêu cầu <i class="fa fa-fw fa-sort-desc"></i></th>
                                             }
                                         }
                                         else
                                         {
-                                            <th class="center" tabindex="0" rowspan="1" data-sort="CategoryName" data-direction="asc" colspan="1">Tên danh mục <i class="fa fa-fw fa-sort-asc"></i></th>
+                                            <th class="center" tabindex="0" rowspan="1" data-sort="RequestContent" data-direction="asc" colspan="1">Nội dung yêu cầu <i class="fa fa-fw fa-sort-asc"></i></th>
                                         }
-                                        @if (Model.SortField.Equals("QuantityInStock"))
+                                        @if (Model.SortField.Equals("ReplyUser"))
                                         {
                                             if (Model.IsAsc)
                                             {
-                                                <th class="center" tabindex="0" rowspan="1" data-sort="QuantityInStock" data-direction="desc" colspan="1">Số lượng <i class="fa fa-fw fa-sort-asc"></i></th>
+                                                <th class="center" tabindex="0" rowspan="1" data-sort="ReplyUser" data-direction="desc" colspan="1">Người duyệt <i class="fa fa-fw fa-sort-asc"></i></th>
                                             }
                                             else
                                             {
-                                                <th class="center" tabindex="0" rowspan="1" data-sort="QuantityInStock" data-direction="asc" colspan="1">Số lượng <i class="fa fa-fw fa-sort-desc"></i></th>
+                                                <th class="center" tabindex="0" rowspan="1" data-sort="ReplyUser" data-direction="asc" colspan="1">Người duyệt <i class="fa fa-fw fa-sort-desc"></i></th>
                                             }
                                         }
                                         else
                                         {
-                                            <th class="center" tabindex="0" rowspan="1" data-sort="QuantityInStock" data-direction="asc" colspan="1">Số lượng <i class="fa fa-fw fa-sort-asc"></i></th>
+                                            <th class="center" tabindex="0" rowspan="1" data-sort="ReplyUser" data-direction="asc" colspan="1">Người duyệt <i class="fa fa-fw fa-sort-asc"></i></th>
                                         }
-                                        @if (Model.SortField.Equals("DateModified"))
+                                        @if (Model.SortField.Equals("IsNew"))
                                         {
                                             if (Model.IsAsc)
                                             {
-                                                <th class="center" tabindex="0" rowspan="1" data-sort="DateModified" data-direction="desc" colspan="1">Ngày cập nhật <i class="fa fa-fw fa-sort-asc"></i></th>
+                                                <th class="center" tabindex="0" rowspan="1" data-sort="IsNew" data-direction="desc" colspan="1">Đã đọc <i class="fa fa-fw fa-sort-asc"></i></th>
                                             }
                                             else
                                             {
-                                                <th class="center" tabindex="0" rowspan="1" data-sort="DateModified" data-direction="asc" colspan="1">Ngày cập nhật <i class="fa fa-fw fa-sort-desc"></i></th>
+                                                <th class="center" tabindex="0" rowspan="1" data-sort="IsNew" data-direction="asc" colspan="1">Đã đọc <i class="fa fa-fw fa-sort-desc"></i></th>
                                             }
                                         }
                                         else
                                         {
-                                            <th class="center" tabindex="0" rowspan="1" data-sort="DateModified" data-direction="asc" colspan="1">Ngày cập nhật <i class="fa fa-fw fa-sort-asc"></i></th>
+                                            <th class="center" tabindex="0" rowspan="1" data-sort="IsNew" data-direction="asc" colspan="1">Đã đọc <i class="fa fa-fw fa-sort-asc"></i></th>
                                         }
-                                        @if (Model.SortField.Equals("ModifiedUser"))
+                                        @if (Model.SortField.Equals("DateCreated"))
                                         {
                                             if (Model.IsAsc)
                                             {
-                                                <th class="center" tabindex="0" rowspan="1" data-sort="ModifiedUser" data-direction="desc" colspan="1">Người cập nhật <i class="fa fa-fw fa-sort-asc"></i></th>
+                                                <th class="center" tabindex="0" rowspan="1" data-sort="DateCreated" data-direction="desc" colspan="1">Ngày yêu cầu <i class="fa fa-fw fa-sort-asc"></i></th>
                                             }
                                             else
                                             {
-                                                <th class="center" tabindex="0" rowspan="1" data-sort="ModifiedUser" data-direction="asc" colspan="1">Người cập nhật <i class="fa fa-fw fa-sort-desc"></i></th>
+                                                <th class="center" tabindex="0" rowspan="1" data-sort="DateCreated" data-direction="asc" colspan="1">Ngày yêu cầu <i class="fa fa-fw fa-sort-desc"></i></th>
                                             }
                                         }
                                         else
                                         {
-                                            <th class="center" tabindex="0" rowspan="1" data-sort="ModifiedUser" data-direction="asc" colspan="1">Người cập nhật <i class="fa fa-fw fa-sort-asc"></i></th>
+                                            <th class="center" tabindex="0" rowspan="1" data-sort="DateCreated" data-direction="asc" colspan="1">Ngày yêu cầu <i class="fa fa-fw fa-sort-asc"></i></th>
                                         }
                                         <th class="center" tabindex="0" rowspan="1" colspan="1"></th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    @for (var i = 1; i <= Model.Products.Count; i++)
+                                    @for (var i = 1; i <= Model.Requests.Count; i++)
                                     {
                                         <tr class="gradeA odd" role="row">
                                             <td>@i</td>
-                                            <td>@Model.Products[i - 1].ProductName</td>
-                                            <td>@Model.Products[i - 1].CategoryName</td>
-                                            <td>@Model.Products[i - 1].QuantityInStock</td>
-                                            <td>@Model.Products[i - 1].DateModified.ToString("dd/MM/yyyy hh:mm")</td>
-                                            <td>@Model.Products[i - 1].ModifiedUser</td>
+                                            <td>@Model.Requests[i - 1].FullName</td>
+                                            <td>@Model.Requests[i - 1].Content</td>
+                                            <td>@Model.Requests[i - 1].ReplyUser</td>
                                             <td style="text-align:center;">
-                                                <a class="action-link detail-link" title="Chi tiết" href="@Url.Action("ViewProductDetail", "Administrator", new { id = Model.Products[i - 1].ProductID })"><i class="fa fa-info-circle fa-lg"></i></a>
-                                                <a class="action-link update-link" title="Cập nhật" href="@Url.Action("UpdateProduct", "Administrator", new { id = Model.Products[i - 1].ProductID })"><i class="fa fa-pencil fa-lg"></i></a>
-                                                <a class="action-link remove-link product" title="Xóa" href="#" data-url="@Url.Action("RemoveProduct", "Administrator", new { id = Model.Products[i - 1].ProductID })"><i class="fa fa-remove fa-lg"></i></a>
+                                                @if (Model.Requests[i - 1].IsNew)
+                                                {
+                                                    <i class="fa fa-check fa-2x success"></i>
+                                                }
+                                            </td>
+                                            <td>@Model.Requests[i - 1].DateCreated.ToString("dd/MM/yyyy hh:mm:ss")</td>
+                                            <td style="text-align:center;">
+                                                <a class="action-link detail-link" title="Chi tiết" href="@Url.Action("ViewRequestDetail", "Administrator", new { id = Model.Requests[i - 1].RequestId })"><i class="fa fa-info-circle fa-lg" title="Chi tiết"></i></a>
                                             </td>
                                         </tr>
                                     }
@@ -194,7 +194,7 @@
                                     else
                                     {
                                         <li class="paginate_button previous" aria-controls="dataTables-example" tabindex="0" id="dataTables-example_previous">
-                                            <a href="@Url.Action("ViewProduct", "Administrator", new {page = Model.CurrentPage - 1, itemsPerPage = Model.ItemOnPage, searchText = Model.SearchText, sortField = Model.SortField, isAsc = Model.IsAsc})">Trước</a>
+                                            <a href="@Url.Action("ViewRequest", "Administrator", new {page = Model.CurrentPage - 1, itemsPerPage = Model.ItemOnPage, searchText = Model.SearchText, sortField = Model.SortField, isAsc = Model.IsAsc})">Trước</a>
                                         </li>
                                     }
 
@@ -205,13 +205,13 @@
                                             if (i == 0)
                                             {
                                                 <li class="paginate_button active" aria-controls="dataTables-example" tabindex="0">
-                                                    <a href="@Url.Action("ViewProduct", "Administrator", new {page = Model.CurrentPage + i, itemsPerPage = Model.ItemOnPage, searchText = Model.SearchText, sortField = Model.SortField, isAsc = Model.IsAsc})">@((Model.CurrentPage + i).ToString())</a>
+                                                    <a href="@Url.Action("ViewRequest", "Administrator", new {page = Model.CurrentPage + i, itemsPerPage = Model.ItemOnPage, searchText = Model.SearchText, sortField = Model.SortField, isAsc = Model.IsAsc})">@((Model.CurrentPage + i).ToString())</a>
                                                 </li>
                                             }
                                             else
                                             {
                                                 <li class="paginate_button" aria-controls="dataTables-example" tabindex="0">
-                                                    <a href="@Url.Action("ViewProduct", "Administrator", new { page = Model.CurrentPage + i, itemsPerPage = Model.ItemOnPage, searchText = Model.SearchText, sortField = Model.SortField, isAsc = Model.IsAsc })">@((Model.CurrentPage + i).ToString())</a>
+                                                    <a href="@Url.Action("ViewRequest", "Administrator", new { page = Model.CurrentPage + i, itemsPerPage = Model.ItemOnPage, searchText = Model.SearchText, sortField = Model.SortField, isAsc = Model.IsAsc })">@((Model.CurrentPage + i).ToString())</a>
                                                 </li>
                                             }
                                         }
@@ -226,7 +226,7 @@
                                     else
                                     {
                                         <li class="paginate_button next" aria-controls="dataTables-example" tabindex="0" id="dataTables-example_next">
-                                            <a href="@Url.Action("ViewProduct", "Administrator", new {page = Model.CurrentPage + 1, itemsPerPage = Model.ItemOnPage, searchText = Model.SearchText, sortField = Model.SortField, isAsc = Model.IsAsc})">Sau</a>
+                                            <a href="@Url.Action("ViewRequest", "Administrator", new {page = Model.CurrentPage + 1, itemsPerPage = Model.ItemOnPage, searchText = Model.SearchText, sortField = Model.SortField, isAsc = Model.IsAsc})">Sau</a>
                                         </li>
                                     }
                                 </ul>
@@ -236,7 +236,7 @@
                 }
                 else
                 {
-                    <h5>Không có sản phẩm nào được lưu trong cơ sở dữ liệu. Vui lòng tạo sản phẩm mới tại <a href="@Url.Action("AddProduct", "Administrator")">đây</a></h5>
+                    <h5>Không có sản phẩm nào được lưu trong cơ sở dữ liệu.</h5>
                 }
             </div>
         </div>
@@ -244,5 +244,5 @@
 </div>
 @section Scripts
 {
-    <script src="@Url.Content("~/Scripts/Admin/product.js")"></script>
+    <script src="@Url.Content("~/Scripts/Admin/request.js")"></script>
 }
