--- a/170516/Views/Home/Contact.cshtml
+++ b/170516/Views/Home/Contact.cshtml
@@ -1,17 +1,174 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "Liên hệ";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
+<div class="row" style="text-align:center;background-color:#fff;">
+    <img src="~/Content/Construction-Company.jpg" />
+</div>
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+<div class="row">
+    <div class="col-md-4">
+        <div class="wpb_wrapper">
+            <!-- BDF CONTACT LINKS -->
+            <div class="jx-rebuild-contact-info">
+
+                <div class="icon"><i class="fa fa-globe fa-5x"></i></div>
+
+                <div class="item-position">
+                    <div class="title">ĐỊA ĐIỂM</div>
+                    <div class="address">Hà Nội: 80 Cầu Giấy, Ba Đình</div>
+                    <div class="address">Hồ Chí Minh: 05 Nguyễn Huệ, Q.1</div>
+                    <div class="address">Đà Nẵng: 01 Trần Phú, Hải Châu</div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="col-md-4">
+        <div class="wpb_wrapper">
+            <!-- BDF CONTACT LINKS -->
+            <div class="jx-rebuild-contact-info">
+
+                <div class="icon"><i class="fa fa-phone fa-5x"></i></div>
+
+                <div class="item-position">
+                    <div class="title">ĐIỆN THOẠI</div>
+                    <div class="phone">(997) 54 215412 - (997) 54 132546</div>
+                    <div class="phone">(997) 54 215412 - (997) 54 132546</div>
+                    <div class="phone">(997) 54 215412 - (997) 54 132546</div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="col-md-4">
+        <div class="wpb_wrapper">
+            <!-- BDF CONTACT LINKS -->
+            <div class="jx-rebuild-contact-info">
+
+                <div class="icon"><i class="fa fa-wechat fa-5x"></i></div>
+
+                <div class="item-position">
+                    <div class="title">LIÊN HỆ KHÁC</div>
+                    <div class="address"><a href="#"><i class="fa fa-facebook"></i> <span>www.facebook.com/construction-site</span></a></div>
+                    <div class="address"><a href="#"><i class="fa fa-skype"></i> <span>skype:construction-site</span></a></div>
+                    <div class="email"><i class="fa fa-inbox"></i> <span>info.constructionsite@gmail.com</span></div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<hr />
+
+<!-- FORM -->
+<div class="form-horizontal" style="margin-top:40px;">
+    <div class="row">
+        <div class="col-md-6 col-lg-6 col-lg-offset-2">
+            <div class="form-group">
+                <label class="col-sm-4 control-label" for="FullName">Họ và Tên <span class="text-danger">*</span></label>
+                <div class="col-sm-8">
+                    <input class="form-control" type="text" id="FullName" name="FullName" />
+                    <span class="input-error-box text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-4 control-label" for="EmailAddress">Địa chỉ email <span class="text-danger">*</span></label>
+                <div class="col-sm-8">
+                    <input class="form-control" type="email" id="EmailAddress" name="EmailAddress" />
+                    <span class="input-error-box text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-4 control-label" for="Content">Nội dung <span class="text-danger">*</span></label>
+                <div class="col-sm-8">
+                    <textarea class="form-control" id="Content" name="Content" style="height: 150px;"></textarea>
+                    <span class="input-error-box text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-offset-7 col-sm-10">
+                    <button id="SendRequestBtn" type="button" class="btn btn-primary"><i class="fa fa-envelope-o"></i> Gửi yêu cầu</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+@section Scripts
+{
+    <script>
+        $(document).ready(function () {
+            $('#SendRequestBtn').on('click', function () {
+                var isValid = true;
+                var $name = $('#FullName'),
+                    $email = $('#EmailAddress'),
+                    $content = $('#Content');
+
+                // validate
+                if ($name.val() == null || $name.val() == undefined || $name.val().trim() == "") {
+                    isValid = false;
+                    // show message
+                    $name.next().text('Làm ơn nhập họ và tên.').show();
+                }
+
+                if ($email.val() == null || $email.val() == undefined || $email.val().trim() == "") {
+                    isValid = false;
+                    // show message
+                    $email.next().text('Làm ơn nhập địa chỉ thư điện tử.').show();
+                }
+
+                if ($content.val() == null || $content.val() == undefined || $content.val().trim() == "") {
+                    isValid = false;
+                    // show message
+                    $content.next().text('Làm ơn nhập nội dung yêu cầu.').show();
+                }
+
+                if (isValid) {
+                    // hide all error message of this form
+                    $name.next().text('').attr('style', 'display:none;');
+                    $email.next().text('').attr('style', 'display:none;');
+                    $content.next().text('').attr('style', 'display:none;');
+
+                    // prepare model
+                    var requestContactModel = {
+                        FullName: $name.val(),
+                        EmailAddress: $email.val(),
+                        Content: $content.val()
+                    };
+
+                    // call ajax
+                    $.ajax({
+                        url: staticUrl.SendRequestContact,
+                        method: "POST",
+                        data: requestContactModel,
+                        beforeSend: function () {
+                            // add loading
+                        },
+                        success: function (data) {
+                            if (data != null) {
+                                if (data.isValid) {
+                                    // reset forms
+                                    $name.val('');
+                                    $email.val('');
+                                    $content.val('');
+
+                                    toastr.success('Gửi yêu cầu thành công.');
+                                    return;
+                                }                                
+                            }
+
+                            toastr.error('Có lỗi xảy ra trong quá trình lưu. Vui lòng thử lại.');
+                        },
+                        error: function (e) {
+                            toastr.error('Có lỗi xảy ra trong quá trình lưu. Vui lòng thử lại.');
+                        }
+                    });
+                }
+            });
+        });
+    </script>
+}
