--- a/170516/Views/Shared/_Layout.cshtml
+++ b/170516/Views/Shared/_Layout.cshtml
@@ -53,15 +53,15 @@
             @RenderBody()
         </div>
 
-        <hr>
+        @*<hr>*@
         <!-- Footer -->
-        <footer>
+        @*<footer>
             <div class="row">
                 <div class="col-lg-12">
                     <p>Copyright &copy; Your Website 2014</p>
                 </div>
             </div>
-        </footer>
+        </footer>*@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
@@ -72,7 +72,8 @@
     <script type="text/javascript">
         var staticUrl = {
             ViewCategory: "@Url.Action("ViewCategory","Product")",
-            GetSubCategory: "@Url.Action("GetSubCategory","Product")"
+            GetSubCategory: "@Url.Action("GetSubCategory","Product")",
+            SendRequestContact: "@Url.Action("SendRequestContact", "Home")"            
         };
 
         // environment
