--- a/170516/Views/Shared/_Layout.cshtml
+++ b/170516/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                         <a href="@Url.Action("Index","Home")">Trang Chủ</a>
                     </li>
                     <li>
-                        <a href="@Url.Action("Showcase", "Home")">Sản Phẩm</a>
+                        <a href="@Url.Action("Showcase", "Product")">Sản Phẩm</a>
                     </li>
                     <li>
                         <a href="@Url.Action("About","Home")">Giới Thiệu</a>
@@ -53,15 +53,15 @@
             @RenderBody()
         </div>
 
-        <hr>
+        @*<hr>*@
         <!-- Footer -->
-        <footer>
+        @*<footer>
             <div class="row">
                 <div class="col-lg-12">
                     <p>Copyright &copy; Your Website 2014</p>
                 </div>
             </div>
-        </footer>
+        </footer>*@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
