Doanh HN - view user and deactive

--- a/170516/Views/Shared/_AdminLayout.cshtml
+++ b/170516/Views/Shared/_AdminLayout.cshtml
@@ -44,7 +44,7 @@
                             </ul>
                         </li>
                         <li><a href="@Url.Action("ViewRequest","Administrator")"><i class="fa fa-inbox" aria-hidden="true"></i> Yêu Cầu Khách Hàng</a></li>                        
-                        <li><a href="stats.html"><i class="fa fa-users" aria-expanded="false"></i> Tài Khoản</a></li>
+                        <li><a href="@Url.Action("ViewUser","Administrator")"><i class="fa fa-users" aria-expanded="false"></i> Tài Khoản</a></li>
                         <li><a href="@Url.Action("ViewOrder","Administrator")"><i class="fa fa-shopping-cart" aria-expanded="false"></i> Đơn Hàng</a></li>
                         
                     </ul>
