--- a/170516/Views/Administrator/AddUser.cshtml
+++ b/170516/Views/Administrator/AddUser.cshtml
@@ -1,9 +1,10 @@
 ﻿@model _170516.Models.Administrator.UpdateUserModel
 
 @{
-    ViewBag.Title = "UpdateUser";
+    ViewBag.Title = "AddUser";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
+
 <div class="row">
     <div class="col-md-12">
         <div class="content-box-large">
@@ -11,20 +12,18 @@
                 @*nav bar*@
                 <ol class="breadcrumb">
                     <li><a href="@Url.Action("ViewUser","Administrator")">Quản Lý Người dùng</a></li>
-                    <li class="active">Chỉnh sửa Người dùng</li>
+                    <li class="active">Thêm Người dùng</li>
                 </ol>
-                <div class="panel-title title-3">Chỉnh sửa Người dùng</div>
+                <div class="panel-title title-3">Thêm Người dùng</div>
             </div>
             <div class="panel-body">
-                @using (Html.BeginForm(null, null, FormMethod.Post, new { @id = "updateUserForm" }))
+                @using (Html.BeginForm(null, null, FormMethod.Post, new { @id = "addUserForm" }))
                 {
                     @Html.AntiForgeryToken()
                     <div class="form-horizontal">
                         <div class="row">
                             @Html.ValidationSummary(true)
                             <div class="col-md-8 col-lg-8">
-                                <!-- PRODUCT CATEGORY NAME -->
-                                @Html.HiddenFor(model => model.AccountID)
 
                                 <div class="form-group">
                                     <label class="col-sm-3 control-label" for="ProductName">Tên đăng nhập <span class="text-danger">*</span></label>
@@ -47,7 +46,15 @@
                                         @Html.ValidationMessageFor(model => model.LastName, null, new { @class = "input-error-box text-danger" })
                                     </div>
                                 </div>
-                           
+
+                                <div class="form-group">
+                                    <label class="col-sm-3 control-label" for="ProductName">Mật khẩu<span class="text-danger">*</span></label>
+                                    <div class="col-sm-7">
+                                        @Html.PasswordFor(model => model.Password, new { @class = "form-control" }) <span class="input-error-box text-danger"></span>
+                                        @Html.ValidationMessageFor(model => model.Password, null, new { @class = "input-error-box text-danger" })
+                                    </div>
+                                </div>
+
                                 <div class="form-group">
                                     <label class="col-sm-3 control-label" for="ProductName">Email <span class="text-danger">*</span></label>
                                     <div class="col-sm-7">
@@ -62,36 +69,14 @@
                                         @Html.TextBoxFor(model => model.PhoneNumber, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
                                         @Html.ValidationMessageFor(model => model.PhoneNumber, null, new { @class = "input-error-box text-danger" })
                                     </div>
-                                </div> 
-                                
-                                <div class="form-group">                                   
-                                    <label class="col-sm-3 control-label" for="ProductName"><input type="checkbox" id="enableUpdatePassword" /></label>
-                                    <div class="col-sm-7">
-                                        <span class = "form-control">Chỉnh sửa mật khẩu</span>  
-                                    </div>                                 
-                                </div>   
-                                <div class="form-group" id="passwordSection">                                    
-                                    <label class="col-sm-3 control-label" for="ProductName">Mật khẩu<span class="text-danger">*</span></label>
-                                    <div class="col-sm-7">
-                                        @Html.TextBoxFor(model => model.PasswordInUpdate, new { @class = "form-control" }) <span class="input-error-box text-danger"></span>
-                                        @Html.ValidationMessageFor(model => model.PasswordInUpdate, null, new { @class = "input-error-box text-danger" })
-                                    </div>
-                                </div>   
-                                                                                  
+                                </div>
                             </div>
                             <div class="col-md-4 col-lg-4">
                                 <div class="form-group">
                                     <label class="control-label">Ảnh Người dùng</label>
                                     <!-- IMAGE -->
-                                    <div class="image-box">
-                                        @if (string.IsNullOrEmpty(Model.UserImage))
-                                        {
-                                            <img id="ImageBox" src="~/Content/Image/image_placeholder.jpg" class="image-box" />
-                                        }
-                                        else
-                                        {
-                                            <img id="ImageBox" src="@Model.UserImage" class="image-box" />
-                                        }
+                                    <div class="image-box">                                       
+                                        <img id="ImageBox" src="~/Content/Image/image_placeholder.jpg" class="image-box" />
 
                                         <div id="ImagePreviewBox" class="preview-box" style="max-width:80%;"></div>
                                         <input id="ImageUpload" type="file" class="image-file-input" name="ImageUpload" />
@@ -105,8 +90,8 @@
                             <div class="col-md-12 col-lg-12">
                                 <div class="form-group">
                                     <div class="col-md-12 form-button">
-                                        <button class="btn btn-primary" type="button" id="SubmitUpdateUser"><i class="glyphicon glyphicon-floppy-disk"></i> Lưu</button>
-                                        <button class="btn btn-danger" type="button" id="btnDeleteUser"><i class="glyphicon glyphicon-remove"></i> Xóa</button>
+                                        <button class="btn btn-primary" type="button" id="SubmitAddUser"><i class="glyphicon glyphicon-floppy-disk"></i> Lưu</button>
+                                        <button class="btn btn-danger" type="reset"><i class="glyphicon glyphicon-remove"></i>Làm mới</button>
                                     </div>
                                 </div>
                             </div>
